# ontology-mapper

./: .env.template  .gitignore  .pre-commit-config.yaml  CACHING_IMPLEMENTATION.md  DEVELOPMENT.md  ERROR_HANDLING.md  FORMAT_SUPPORT_SUMMARY.md  GUI_FEATURES.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PACKAGE_MANAGERS.md  PUBLICATION_SUMMARY.md  README.md  __init__.py  configure_logging.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_cache.py  test_cache_integration.py  test_error_handling.py  test_formats.py  test_gui_enhancements.py  test_gui_formats.py  test_input_formats.py  test_install.py  test_integration_formats.py  test_schema.yaml  tox.ini
.github/workflows/: ci.yml
cache/: __init__.py  cache_config.py  cache_manager.py
cli/: __init__.py  __main__.py  interface.py  main.py
config/: __init__.py  error_config.py  logging_config.py  ontologies.py
core/: __init__.py  generator.py  lookup.py  parser.py  schema_parser.py
examples/: basic_lookup.py  batch_processing.py  error_handling_demo.py  format_examples.py  sample_concepts.txt
gui/: README.md  bioportal_gui.py  demo_gui.py  launch_gui.py
ontology_mapping/: bioportal_cli.py
scripts/: create_test_structure.py
services/: __init__.py  bioportal.py  comparator.py  ols.py
tests/: __init__.py  conftest.py  test_basic.py
tests/integration/: test_api_integration.py  test_core_generator_integration.py  test_end_to_end_integration.py
tests/integration/cli/: test_cli_command_workflows.py  test_cli_e2e_workflows.py  test_cli_integration.py  test_cli_workflow_scenarios.py
tests/integration/core/: test_core_integration.py
tests/integration/services/: test_api_service_integration.py  test_simple_api_integration.py
tests/unit/: test_cli_interface.py  test_cli_main.py  test_configure_logging.py  test_core_generator.py  test_core_lookup.py  test_core_parser.py  test_init_coverage.py  test_init_fallbacks.py  test_init_import_scenarios.py  test_install.py  test_logging_config.py  test_main_init.py  test_main_py.py  test_main_simple.py  test_services_bioportal.py  test_services_comparator.py  test_services_ols.py  test_utils_helpers.py
tests/unit/cli/: test_interface.py
tests/unit/core/: test_parser.py
tests/unit/gui/: test_bioportal_gui.py  test_bioportal_gui_extended.py  test_demo_gui.py  test_launch_gui.py
tests/unit/services/: test_bioportal.py  test_bioportal.py.backup  test_ols.py
tests/unit/utils/: test_helpers.py
utils/: __init__.py  error_handling.py  health_monitor.py  helpers.py  loading.py  logging_config.py
