[metadata]
name = ontology-mapper
version = 1.0.0
author = Jonas Heinicke
author_email = jonas.heinicke@helmholtz-hzi.de
description = A modular command-line interface for mapping and enriching ontologies using BioPortal and OLS APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JonasHeinickeBio/ontology-mapper
project_urls =
    Bug Tracker = https://github.com/JonasHeinickeBio/ontology-mapper/issues
    Documentation = https://github.com/JonasHeinickeBio/ontology-mapper#readme
    Source Code = https://github.com/JonasHeinickeBio/ontology-mapper
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    rdflib>=6.0.0
    requests>=2.25.0
    typing-extensions>=4.0.0
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    test_*

[options.extras_require]
gui =
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    flake8>=6.0.0
    black>=23.0.0
    isort>=5.12.0
    mypy>=1.0.0
    pre-commit>=3.0.0
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    responses>=0.23.0
docs =
    sphinx>=6.0.0
    sphinx-rtd-theme>=1.2.0
    myst-parser>=0.19.0
    sphinxcontrib-napoleon>=0.7
all =
    ontology-mapper[gui,dev,test,docs]

[options.entry_points]
console_scripts =
    ontology-mapping = main:main
    ontology-gui = gui.launch_gui:main

[options.package_data]
config = *.py

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[egg_info]
tag_build =
tag_date = 0
